apply plugin: 'com.android.application'

android {
    namespace "de.KnollFrank.settingssearch"
    compileSdk 34

    defaultConfig {
        applicationId "de.KnollFrank.settingssearch"
        minSdkVersion 24
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    testOptions {
        unitTests.includeAndroidResources = true
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.preference:preference:1.2.1'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation 'com.google.guava:guava:33.3.1-android'
    implementation project(":lib")
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.activity:activity:1.9.3'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
    // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-io
    implementation 'org.jgrapht:jgrapht-io:1.5.2'
    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'androidx.test:core:1.6.1'
    testImplementation 'org.mockito:mockito-core:5.7.0'
    // https://mvnrepository.com/artifact/org.robolectric/robolectric
    testImplementation 'org.robolectric:robolectric:4.13'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
    testImplementation 'androidx.test.espresso:espresso-core:3.6.1'

    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'org.mockito:mockito-android:5.7.0'
    androidTestImplementation 'org.mockito:mockito-core:5.7.0'
    // https://mvnrepository.com/artifact/com.github.npathai/hamcrest-optional
    androidTestImplementation group: 'com.github.npathai', name: 'hamcrest-optional', version: '2.0.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'androidx.test:rules:1.6.1'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.6.1'
    // https://mvnrepository.com/artifact/com.codepoetics/ambivalence
    implementation 'com.codepoetics:ambivalence:0.2'
}
